[gd_scene load_steps=16 format=3 uid="uid://cjqwwt423438q"]

[ext_resource type="Script" uid="uid://bvcti16mvkff6" path="res://menu.gd" id="1_l48gv"]
[ext_resource type="Texture2D" uid="uid://oi4emc4hgg08" path="res://BasicSprites/Square.svg" id="2_ecwwl"]
[ext_resource type="Script" path="res://resume.gd" id="3_kk3ma"]
[ext_resource type="Script" path="res://exit.gd" id="4_nrnbx"]
[ext_resource type="Script" uid="uid://ra5ja2cw5nli" path="res://level_Selector.gd" id="5_iqepy"]
[ext_resource type="Script" uid="uid://b55j2ho7g65nd" path="res://level_select.gd" id="6_h1wq0"]
[ext_resource type="PackedScene" uid="uid://co7m0hav08y6k" path="res://levels/level_1.tscn" id="7_oxnod"]
[ext_resource type="PackedScene" uid="uid://dghcmepobk5ir" path="res://levels/level_2.tscn" id="8_gd0jp"]
[ext_resource type="PackedScene" uid="uid://wdg3f6n51uma" path="res://levels/level_3.tscn" id="9_4ndjb"]
[ext_resource type="PackedScene" uid="uid://8kyevl0ecrl3" path="res://levels/level_4.tscn" id="10_3ls4m"]
[ext_resource type="PackedScene" uid="uid://bginqpy6r2sxv" path="res://levels/level_5.tscn" id="11_5h80m"]
[ext_resource type="PackedScene" uid="uid://7wrl2ma0jfm1" path="res://levels/level_6.tscn" id="12_w25hu"]
[ext_resource type="PackedScene" uid="uid://bgtog6kpi8pd0" path="res://levels/level_7.tscn" id="13_td6mg"]
[ext_resource type="PackedScene" uid="uid://cffjfcal8k5vj" path="res://levels/level_8.tscn" id="14_guify"]
[ext_resource type="PackedScene" uid="uid://du6f82dvp3bki" path="res://levels/level_9.tscn" id="15_oil5j"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_l48gv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
modulate = Color(0.180005, 0.180005, 0.180005, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ecwwl")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Resume" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Resume"
script = ExtResource("3_kk3ma")

[node name="Exit" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Exit
"
script = ExtResource("4_nrnbx")

[node name="Container" type="Container" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="HSlider" type="HSlider" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3
script = ExtResource("5_iqepy")

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Just the 8 Ball, Please"
script = ExtResource("6_h1wq0")
next_level = ExtResource("7_oxnod")

[node name="Button2" type="Button" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "More Money More Problems"
script = ExtResource("6_h1wq0")
next_level = ExtResource("8_gd0jp")

[node name="Button3" type="Button" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Around the Bend"
script = ExtResource("6_h1wq0")
next_level = ExtResource("9_4ndjb")

[node name="Button4" type="Button" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "The Regular, No Frills"
script = ExtResource("6_h1wq0")
next_level = ExtResource("10_3ls4m")

[node name="Button5" type="Button" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "I Called Your Pocket"
script = ExtResource("6_h1wq0")
next_level = ExtResource("11_5h80m")

[node name="Button6" type="Button" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Level 1"
script = ExtResource("6_h1wq0")
next_level = ExtResource("12_w25hu")

[node name="Button7" type="Button" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Level 1"
script = ExtResource("6_h1wq0")
next_level = ExtResource("13_td6mg")

[node name="Button8" type="Button" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Level 1"
script = ExtResource("6_h1wq0")
next_level = ExtResource("14_guify")

[node name="Button9" type="Button" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Level 1"
script = ExtResource("6_h1wq0")
next_level = ExtResource("15_oil5j")
